# StellarSplit

./: .gitignore  CONTRIBUTORS.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  architecture.md  dev-guide.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  railway.json  tsconfig.build.json  tsconfig.json
backend/docs/: architecture.md
backend/scripts/: explain-queries.ts
backend/src/: app.module.ts  express.d.ts  main.ts
backend/src/analytics/: README.md  analytics.cleanup.spec.ts  analytics.controller.spec.ts  analytics.controller.ts  analytics.module.ts  analytics.processor.spec.ts  analytics.processor.ts  analytics.scheduler.ts  analytics.service.spec.ts  analytics.service.ts  cleanup.helper.ts  reports.entity.ts  stream.helper.ts
backend/src/audit-trail/: README.md  audit-event.entity.ts  audit-report.json  audit.module.ts  audit.service.ts  audit.test.ts  auditLogger.ts  eventStore.ts  report.ts  retention.ts  search.ts
backend/src/auth/: auth.module.ts
backend/src/batch/: batch-events.service.ts  batch-progress.service.ts  batch.controller.spec.ts  batch.controller.ts  batch.module.ts  batch.service.spec.ts  batch.service.ts
backend/src/common/: health.controller.ts
backend/src/compliance/: compliance.controller.ts  compliance.module.ts  compliance.processor.ts  compliance.service.spec.ts  compliance.service.ts  historical-rates.service.ts
backend/src/config/: env.validation.ts  redis.config.ts
backend/src/contracts/: frontend-contracts.integration.spec.ts
backend/src/currency/: conversion.service.ts  currency-rate.service.ts  currency.controller.ts  currency.module.ts  currency.service.ts
backend/src/dashboard/: dashboard.controller.ts  dashboard.module.ts  dashboard.service.ts
backend/src/database/: data-source.ts
backend/src/debt-simplification/: debt-graph.service.spec.ts  debt-graph.service.ts  debt-simplification.controller.ts  debt-simplification.module.ts  debt-simplification.service.spec.ts  debt-simplification.service.ts
backend/src/disputes/: ARCHITECTURE.md  EXAMPLE_WORKFLOW.md  README.md  (+10 more)
backend/test/: receipt-to-split.e2e.spec.ts
contracts/: Cargo.toml  README.md  rust-toolchain.toml  storage.rs
contracts/achievement-badges/: Cargo.toml  README.md
contracts/achievement-badges/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/dispute-resolution/: Cargo.toml
contracts/dispute-resolution/src/: errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/flash-loan/: Cargo.toml
contracts/flash-loan/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/multi-sig-splits/: Cargo.toml  README.md
contracts/multi-sig-splits/proptest-regressions/: test.txt
contracts/multi-sig-splits/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/path-payment/: Cargo.toml
contracts/path-payment/proptest-regressions/: test.txt
contracts/path-payment/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/reminder/: events.rs  lib.rs  mod.rs  types.rs
contracts/scripts/: build-achievement-badges.sh  build-multi-sig-splits.sh  build.sh  ci-contracts.sh  deploy.sh  test.sh
contracts/split-escrow/: Cargo.toml
contracts/split-escrow/Unit Tests lib.rs/: Unit Tests lib.rs
contracts/split-escrow/src/: errors.rs  events.rs  fees.rs  lib.rs  storage.rs  test.rs  test_helpers.rs  types.rs
contracts/split-template/: Cargo.toml
contracts/split-template/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs  utils.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
docs/: API.md  COMPONENTS.md  CONTRACTS.md  DEPLOYMENT.md  STELLAR_INTEGRATION.md  ws-gateway-contract.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.css  App.tsx  index.css  main.tsx
github/workflows/: ci.yml  deploy-backend.yml  deploy-contracts.yml  deploy-frontend.yml
ml-service/: Dockerfile  README.md  requirements.txt
ml-service/app/: __init__.py  config.py  main.py
ml-service/tests/: test_models.py
(+491 files in other folders)
