[workspace]
resolver = "2"

members = [
    "achievement-badges",
    "flash-loan",
    "path-payment",
    "split-template",
    "staking",
]
# Excluded: these crates have compilation errors and are not yet workspace-ready
# - dispute-resolution: many compilation errors (mid-port to pinned Soroban toolchain)
# - split-escrow: many compilation errors (draft/broken source)
# - multi-sig-splits: E0507 move error (needs ownership fix)
exclude = [
    "dispute-resolution",
    "split-escrow",
    "multi-sig-splits",
]

[workspace.dependencies]
soroban-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
