[workspace]
resolver = "2"

members = [
    "achievement-badges",
    "flash-loan",
    "dispute-resolution",
    "path-payment",
    "split-template",
    "staking",
    "split-escrow",
    "multi-sig-splits",
]
# Excluded: these crates have compilation errors and are not yet workspace-ready
# - dispute-resolution: many compilation errors (mid-port to pinned Soroban toolchain)
exclude = [
]

[workspace.dependencies]
soroban-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
