[package]
name = "multi-sig-splits"
version = "0.1.0"
edition = "2021"
authors = ["StellarSplit Team"]
description = "Soroban multi-signature contract with time-locks for large splits"
license = "MIT"
repository = "https://github.com/OlufunbiIK/StellarSplit"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
proptest = "1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true