[package]
name = "split-escrow"
version = "0.1.0"
authors = ["Your Name <youremail@example.com>"]
edition = "2021"
description = "Soroban contract for escrow with optional on-chain metadata"
license = "MIT"

# This tells Cargo it’s a library crate (needed for Soroban contracts)
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
proptest = "1"

[profile.release]
# Optimize for WebAssembly (Soroban target)
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1