[package]
name = "split-template"
version = "0.1.0"
edition = "2021"
authors = ["StellarSplit Team"]
description = "Soroban contract for managing reusable split templates"
license = "MIT"
repository = "https://github.com/OlufunbiIK/StellarSplit"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
